# ibc-transfer

./: cargo.toml
finally-a-contract/: README.md
finally-a-contract/ibc-transfer/: Cargo.toml  NOTICE  README.md
finally-a-contract/ibc-transfer/src/: consts.rs  contract.rs  error.rs  execute.rs  ibc_lifecycle.rs  lib.rs  msg.rs  proto.rs  state.rs
generic-question/: Cargo.toml
generic-question/src/: generic.rs
should-load/: Cargo.toml
should-load/src/: assignment.rs
