[package]
name = "should-load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.2.4" }
cw-storage-plus = "1.0.1"
serde = { version = "1.0.103", default-features = false, features = [
    "derive",
    "alloc",
] }